MonetDB/src/mal/Tests/tst200.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2001, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## The series tst2?? is a patched version of suite_00
## The first and foremost BAT operations
#
#o:=oid(20000000);
#setoid(o);
##test basic functionality of the BAT library.
##focussed on integers
##it includes insertions,deletions,selections, and joins.
#
#b:= new(int,int);
#printf("#~BeginVariableOutput~#\n"); 
##binfo:= info(b);
##err:= print(binfo); 
#printf("#~EndVariableOutput~#\n");
#
#err := insert(b,1,15);
#err := insert(b,2,4);
#n0  := int(nil);
#err := insert(b,3,n0);
#err := insert(b,4,16);
#err := insert(b,5,25);
#err := insert(b,6,36);
#err := insert(b,7,49);
#err := insert(b,8,64);
#err := insert(b,9,n0);
#err := insert(b,n0,n0);
#err := insert(b,n0,81);
#print(b);
#print(b,b,b);
#
!ERROR: WARNING:newConstant:int coerced to lng
function Admin.main():int;	#0:void (main:int)
	o := calc.oid(20000000);	#1:oid (o:oid)($2:int)
	calc.setoid(o);	#2:oid ($3:oid)(o:oid)
	b := mal.new(int,int);	#3:BAT (b:bat[int,int])(int:int)(int:int)
	system.printf("#~BeginVariableOutput~#\n");	#4:int ($6:int)($7:str)
	system.printf("#~EndVariableOutput~#\n");	#5:int ($8:int)($9:str)
	err := bat.insert(b,1,15);	#6:BAT (err:bat[int,int])(b:bat[int,int])($11:int)($12:int)
	err := bat.insert(b,2,4);	#7:BAT (err:bat[int,int])(b:bat[int,int])($13:int)($14:int)
	n0 := calc.int(nil);	#8:int (n0:int)($16:void)
	err := bat.insert(b,3,n0);	#9:BAT (err:bat[int,int])(b:bat[int,int])($17:int)(n0:int)
	err := bat.insert(b,4,16);	#10:BAT (err:bat[int,int])(b:bat[int,int])($14:int)($18:int)
	err := bat.insert(b,5,25);	#11:BAT (err:bat[int,int])(b:bat[int,int])($19:int)($20:int)
	err := bat.insert(b,6,36);	#12:BAT (err:bat[int,int])(b:bat[int,int])($21:int)($22:int)
	err := bat.insert(b,7,49);	#13:BAT (err:bat[int,int])(b:bat[int,int])($23:int)($24:int)
	err := bat.insert(b,8,64);	#14:BAT (err:bat[int,int])(b:bat[int,int])($25:int)($26:int)
	err := bat.insert(b,9,n0);	#15:BAT (err:bat[int,int])(b:bat[int,int])($27:int)(n0:int)
	err := bat.insert(b,n0,n0);	#16:BAT (err:bat[int,int])(b:bat[int,int])(n0:int)(n0:int)
	err := bat.insert(b,n0,81);	#17:BAT (err:bat[int,int])(b:bat[int,int])(n0:int)($28:int)
	mal.print(b);	#18:int ($29:int)(b:bat[int,int])
	mal.print(b,b,b);	#19:int ($30:int)(b:bat[int,int])(b:bat[int,int])(b:bat[int,int])
end function;	#20:void 
#~BeginVariableOutput~#
#~EndVariableOutput~#
#-----------------#
# BAT:	  tmp_5	  #
# (int)	  (int)	  #
#-----------------#
[ 1,	  15	  ]
[ 2,	  4	  ]
[ 3,	  nil	  ]
[ 4,	  16	  ]
[ 5,	  25	  ]
[ 6,	  36	  ]
[ 7,	  49	  ]
[ 8,	  64	  ]
[ 9,	  nil	  ]
[ nil,	  nil	  ]
[ nil,	  81	  ]
#-----------------#
# tmp_5	| tmp_5	  #
#-----------------#
[ 15,	  15	  ]
[ 4,	  4	  ]
[ nil,	  nil	  ]
[ 16,	  16	  ]
[ 25,	  25	  ]
[ 36,	  36	  ]
[ 49,	  49	  ]
[ 64,	  64	  ]
[ nil,	  nil	  ]
[ nil,	  81	  ]
[ nil,	  nil	  ]
[ 81,	  81	  ]
[ 81,	  nil	  ]
>